--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.2.0",
     "react-particles-js": "^2.1.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "styled-components": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
